# RexLang

./: .gitignore  CMakeLists.txt  INSTALL.md  License.txt  OpenELanguage.sln  README.md  TODO.md  pre_build_check.cmake
Compiler/: AstGenerator.cs  AstNode.cs  CMakeLists.txt  Compiler.csproj  ErrorManager.cs  Expression.cs  ModuleReadme.md  Program.cs  Statement.cs  compile_driver.cpp  compile_driver.h  main_entity.cpp  oe_driver.cpp  oe_driver.h  opene.g4  openeLang.g4  openeLexer.g4  openeParser.g4  project_db.h  update_parser.bat
Compiler/AST/: AstGenerator.cs  AstNode.cs  Expression.cs  Statement.cs
Compiler/Parser/: opene.cs  opene.interp  opene.tokens  openeBaseVisitor.cs  openeLangBaseVisitor.cs  openeLangLexer.cs  openeLangParser.cs  openeLangVisitor.cs  openeLexer.cs  openeLexer.interp  openeLexer.tokens  openeParser.cs  openeParser.interp  openeParser.tokens  openeParserBaseVisitor.cs  openeParserVisitor.cs  openeVisitor.cs
Compiler/Properties/: AssemblyInfo.cs
Compiler/codegen/: CMakeLists.txt  GenHostCodePass.cpp  LLCodeGen.cpp  LLCodeGen.h  ModuleReadme.md
Compiler/interpreter/: CMakeLists.txt  TreeInterpreter.cpp  TreeInterpreter.h
Compiler/ir/: CMakeLists.txt  EmitIR.cpp  EmitIR.h  EmitLLVMIR.cpp  EmitLLVMIR.h  EmitOEIR.cpp  EmitOEIR.h  GenIRPass.cpp  IR.cpp  IR.h  LLVMRTIRBuilder.cpp  LLVMRTIRBuilder.h  ModuleReadme.md  SimpleRTTI_ArguType.h  Type.cpp  Type.h
Compiler/ir/LLVMIR/: CMakeLists.txt  DebugInfoMgr.cpp  DebugInfoMgr.h  EmitLLVMIR.cpp  EmitLLVMIR.h  Emitter.cpp  Emitter.h  GenLLIRPass.cpp  LLCodeGen.cpp  LLVMRTIRBuilder.cpp  LLVMRTIRBuilder.h  LowAST.cpp  LowAST.h  NewEmitter.cpp  NewEmitter.h
Compiler/link/: CMakeLists.txt  LinkPass.cpp  Linker.cpp  Linker.h  ModuleReadme.md  lld-driver.cpp  lld-driver.h  lld.cpp
Compiler/oe_src/: class.txt  dll_define.txt  global_variable.txt  struct_declare.txt  window_program_set1.txt
Compiler/open_parse/opene/: openeLexer.cpp  openeLexer.h
Compiler/opene_compiler/: ASTAssert.cpp  ASTAssert.h  ASTBuilder.cpp  ASTBuilder.h  ASTContext.cpp  ASTContext.h  ASTFetchSubnode.cpp  ASTFetchSubnode.h  ASTUtility.cpp  ASTUtility.h  AstGenerate.cpp  AstGenerate.h  CMakeLists.txt  CST2ASTConvert.cpp  CST2ASTConvert.h  ClassInheritance.dot  Diagnostic.cpp  Diagnostic.h  Location.cpp  Location.h  NodeDecl.h  SematicAnalysis.cpp  SematicAnalysis.h  SematicAnalysisContext.cpp  SematicAnalysisContext.h  SematicAnalysisTypeAssert.cpp  SematicAnalysisUtils.cpp  Str2Attr.h  TypeAssert.cpp  TypeAssert.h  openeLang.g4
Compiler/opene_compiler/antlr_parse_rt/: CPackConfig.cmake  Makefile
Compiler/opene_compiler/common_rt/: ErrOr.h  StringRef.cpp  StringRef.h  TString.cpp  TString.h
Compiler/opene_compiler/dump/: Dump.cpp  Dump.h
Compiler/opene_compiler/sematic_analysis/: SematicAnalysis.cpp  SematicAnalysis.h  SematicAnalysisContext.cpp  SematicAnalysisContext.h  SematicAnalysisNameMangle.cpp  SematicAnalysisNameMangle.h  SematicAnalysisTypeAssert.cpp  SematicAnalysisUtils.cpp
Compiler/opene_compiler/utilities/: ASTFetchSubnode.cpp  ASTFetchSubnode.h  Defer.h  Diagnostic.cpp  Location.h  Str2Attr.cpp  Str2Attr.h
Compiler/opene_parse/: ASTAssert.cpp  ASTAssert.h  ASTBuilder.cpp  ASTBuilder.h  ASTContext.cpp  ASTContext.h  ASTFetchSubnode.cpp  ASTFetchSubnode.h  ASTUtility.cpp  ASTUtility.h  AstGenerate.cpp  AstGenerate.h  CMakeLists.txt  ClassInheritance.dot  Diagnostic.cpp  Diagnostic.h  ErrOr.cpp  ErrOr.h  Location.cpp  Location.h  NodeDecl.h  SematicAnalysis.cpp  SematicAnalysis.h  SematicAnalysisContext.cpp  SematicAnalysisContext.h  SematicAnalysisUtils.cpp  Str2Attr.cpp  Str2Attr.h  StringRef.cpp  StringRef.h  TString.cpp  TString.h  TypeAssert.cpp  TypeAssert.h  TypeDescription.cpp  TypeDescription.h  TypeSystem.cpp  TypeSystem.h  node_decl.h  openeLang.g4  (+15 more)
Compiler/opene_parse/dump/: Dump.cpp  Dump.h
Compiler/opene_parse/parse_rt/: CMakeCache.txt  CPackSourceConfig.cmake  cmake_install.cmake  install_manifest.txt
Compiler/rexlang_compiler/: ASTAssert.cpp  ASTAssert.h  ASTBuilder.cpp  ASTBuilder.h  ASTContext.cpp  ASTContext.h  ASTNodeConnect.cpp  ASTNodeGetterSetter.cpp  ASTUtility.cpp  ASTUtility.h  AstGenerate.cpp  AstGenerate.h  CMakeLists.txt  CST2ASTConvert.cpp  CST2ASTConvert.h  ClassInheritance.dot  CompileCallGraph.gv  Constructors.cpp  Decl.cpp  ExprLR.cpp  ExprTypeInfer.cpp  HierarchyIdentifier.cpp  ModuleReadme.md  NodeClassInheritance.dot  NodeDecl.h  NodeInheritGraph.gv  Replacement.cpp  Symbols.cpp  TypeAssert.cpp  TypeAssert.h  TypeConvert.cpp  TypeSystem.cpp  TypeSystem.h  VerifyExpression.cpp  rexLang.g4  rtti.cpp  rtti.h
Compiler/rexlang_compiler/common_rt/: ErrOr.cpp  StringRef.cpp  StringRef.h  TString.cpp  TString.h
Compiler/rexlang_compiler/dump/: Dump.cpp  Dump.h
Compiler/rexlang_compiler/sematic_analysis/: APISemaAction.cpp  APISemaAction.h  CMakeLists.txt  CompleteArguments.cpp  RegistResource.cpp  Sema.cpp  SemaCFG.cpp  SemaCFG.h  SemaContext.cpp  SemaContext.h  SematicAnalysis.cpp  SematicAnalysis.h  SematicAnalysisContext.cpp  SematicAnalysisContext.h  SematicAnalysisNameMangle.cpp  SematicAnalysisNameMangle.h  SematicAnalysisTypeAssert.cpp  SematicAnalysisUtils.cpp
Compiler/rexlang_compiler/utilities/: ASTBuilder.cpp  ASTBuilder.h  ASTFetchSubnode.cpp  ASTFetchSubnode.h  Diagnostic.cpp  Diagnostic.h  DumpAST.cpp  DumpAST.h  GenerateRecursiveASTVisitorHPP.py  Location.cpp  Location.h  NameMangling.cpp  RecursiveASTVisitor.h  (+4 more)
Compiler/support/: CMakeLists.txt  Command.cpp  Command.h  DiagnosticBase.cpp  DiagnosticBase.h  ModuleReadme.md  Pass.cpp  Pass.h  ProgramDB.cpp  ProgramDB.h  ProjectDB.cpp  ProjectDB.h
corelib/: CMakeLists.txt  ModuleReadme.md  array_runtime_api.cpp  array_runtime_api.h  corelib.txt  newcore.cpp  newcore.h  rex_startup.c  runtime_api.cpp  runtime_api.h  stdrex.txt  string_runtime_api.cpp  string_runtime_api.h  struct_runtime_api.cpp  struct_runtime_api.h
libtools/CDecl/: CMakeLists.txt  cdecl.cpp  cdecl.h  pch.cpp  pch.h
libtools/signgen/: CMakeLists.txt  elaborate.cpp  elaborate.h  generate_target.cpp  generate_target.h  main.cpp
(+62 files in other folders)
