
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(OpenELanguage)
SET(CMAKE_CXX_STANDARD 20)

SET(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/sysroot")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,'$$ORIGIN/../lib/:$ORIGIN/../lib/'" )
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIR}/lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIR}/lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}/bin")
SET(CMAKE_INCLUDE_OUTPUT_DIRECTORY "${OUTPUT_DIR}/include")

FILE(MAKE_DIRECTORY ${OUTPUT_DIR})
FILE(MAKE_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
FILE(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
FILE(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
FILE(MAKE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -g -O0")

ADD_SUBDIRECTORY(lite_util)
ADD_SUBDIRECTORY(Compiler)
ADD_SUBDIRECTORY(corelib)

ADD_CUSTOM_TARGET(OpenELanguage)
ADD_DEPENDENCIES(OpenELanguage oel newcore)

enable_testing()
SET(TESTSUIT_SOURCES_DIRECTORY ${PROJECT_SOURCE_DIR}/oe_test/)
ADD_SUBDIRECTORY(oe_test)
